--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <body id="body">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSFhOxCDx0by9TeWriuJE4HZhL_kPixtg" async
+    defer></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"> </script>
   <div id="root"></div>
 </body>
 
